# VSLAM-Course

./: .gitignore  README.md
Exercise/Lec2/: CMakeLists.txt  readMe.md
Exercise/Lec2/src/: camera.cpp  camera.h  draw_cube.cpp  util.cpp
Lec11/: CMakeLists.txt
Lec11/data/: images.txt  keypoints.txt
Lec11/src/app/: klt_track.cpp
Lec11/src/calib/: dlt.h
Lec11/src/util/: image_util.cpp  image_util.h  math_util.cpp  math_util.h
Lec11/src/vo/: klt.cpp  klt.h  stereo.h
Lec13/: CMakeLists.txt
Lec13/cmake_modules/: FindG2O.cmake
Lec13/data/: hidden_state.txt  observations.txt  poses.txt
Lec13/data_tum/: landmark_estimate.txt  observations.txt  pose_estimate.txt  pose_gt.txt
Lec13/src/app/: ba.cpp
Lec13/src/base/: camera.h
Lec13/src/feature/: sift.h
Lec13/src/util/: file_util.cpp  file_util.h  image_util.cpp  image_util.h
Lec13/src/vo/: klt.cpp  klt.h
Lec2/: CMakeLists.txt
Lec2/conf/: camera.yaml
Lec2/data/: images.txt  poses.txt
Lec2/py/: file_list.py
Lec2/src/: point.hpp  pose.hpp  util.h
Lec3/: CMakeLists.txt  readMe.md
Lec3/conf/: camera.yaml
Lec3/data/: images.txt  p_W_corners.txt
Lec3/py/: file_list.py
Lec3/src/app/: calib.cpp
Lec3/src/base/: image.hpp
Lec3/src/calib/: dlt.cpp
Lec3/src/util/: draw_util.cpp  draw_util.h
Lec5/: CMakeLists.txt
Lec5/data/: images.txt
Lec5/py/: file_list.py
Lec5/src/app/: harris_track.cpp
Lec5/src/base/: camera.cpp
Lec5/src/feature/: harris.cpp  harris.h
Lec5/src/util/: file_util.h  math_util.h  string_util.cpp  util.h
Lec6/: CMakeLists.txt
Lec6/src/app/: sift_match.cpp
Lec6/src/base/: camera_mgr.cpp  pose.hpp
Lec6/src/common/: types.h
Lec6/src/feature/: harris.cpp  sift.cpp  sift.h
Lec6/src/util/: draw_util.cpp  draw_util.h  file_util.cpp  image_util.cpp  math_util.cpp  math_util.h  string_util.h  util.cpp
Lec7/: CMakeLists.txt
Lec7/data/: images.txt
Lec7/py/: file_list.py
Lec7/src/app/: stereo_vision.cpp
Lec7/src/base/: camera_mgr.h
Lec7/src/feature/: harris.cpp  sift.cpp
Lec7/src/util/: image_util.cpp  image_util.h  math_util.cpp  math_util.h  util.h
Lec7/src/vo/: stereo.cpp  stereo.h
Lec8/: CMakeLists.txt
Lec8/data/: matches0001.txt  matches0002.txt
Lec8/src/app/: stereo_vision.cpp
Lec8/src/base/: point.hpp
Lec8/src/calib/: dlt.cpp
Lec8/src/feature/: harris.h
Lec8/src/util/: image_util.h  math_util.cpp  math_util.h
Lec8/src/vo/: stereo.h
Lec9/: CMakeLists.txt
Lec9/data/: p_W_landmarks.txt
Lec9/src/app/: poly_ransac.cpp  stereo_p3p.cpp
Lec9/src/base/: image.hpp
Lec9/src/util/: util.cpp
Lec9/src/vo/: ransac.h  stereo.cpp
课程2-相机模型/Exercise 1 - Augmented Reality Wireframe Cube/data/: D.txt  K.txt
课程2-相机模型/Solution 1 - Augmented Reality Wireframe Cube/code/: distortPoints.m  main.m  poseVectorToTransformationMatrix.m  projectPoints.m  undistortImage.m  undistortImageVectorized.m
